--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Camden Vintage</title>
   </head>
 
@@ -47,11 +47,11 @@
 
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="index.html" class="nav-link scroll-link">Home</a>
+                <a href="#home" class="nav-link scroll-link">Home</a>
               </li>
 
               <li class="nav-item">
-                <a href="./pages/about.html" class="nav-link scroll-link">About Us</a>
+                <a href="#about" class="nav-link scroll-link">About Us</a>
               </li>
 
               <li class="nav-item">
@@ -77,7 +77,18 @@
 
     <!-- Main -->
     <main>
-      <div class="hero">
+      <div class="about-main">
+        <h1 class="about-us">About Us...</h1>
+        <div class="about-main-img"><img src="/shopimages/horsesresize.jpg" alt="Metal horse statues">
+        </div>
+        <div>
+          <p>Welcome to Camden Vintage, the home of hand sourced vintage pieces, based in the heart of Camden town. 
+            We are a small, family run business who started in Camden market almost 15 years ago. 
+            Over this time we have built up a strong connection with the community, gained experience in sourcing unique pieces and collaborated with some of the leading stylists for film, TV and music. 
+            You can see our items in productions from the BBC, ITV, Netflix and many more! We are open every day of the week and welcome all to visit our store. 
+            We look forward to seeing you!</p>
+            <h2 class="signature"> - The Camden Vintage team</h1>
+        </div>
       </div>
     </main>
 
@@ -123,3 +134,4 @@
 
   <script src="script.js"></script>
 </html>
+
