--- a/pages/products.html
+++ b/pages/products.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Camden Vintage</title>
   </head>
 
@@ -47,23 +47,23 @@
 
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="index.html" class="nav-link scroll-link">Home</a>
+                <a href="/index.html" class="nav-link scroll-link">Home</a>
               </li>
 
               <li class="nav-item">
-                <a href="./pages/about.html" class="nav-link scroll-link">About Us</a>
+                <a href="/pages/about.html" class="nav-link scroll-link">About Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="#products" class="nav-link scroll-link">Products</a>
+                <a href="/pages/products.html" class="nav-link scroll-link">Products</a>
               </li>
 
               <li class="nav-item">
-                <a href="#visit" class="nav-link scroll-link">Visit Us</a>
+                <a href="/pages/visit.html" class="nav-link scroll-link">Visit Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="#contact" class="nav-link scroll-link">Contact</a>
+                <a href="/pages/contact.html" class="nav-link scroll-link">Contact</a>
               </li>
             </ul>
           </div>
@@ -77,7 +77,17 @@
 
     <!-- Main -->
     <main>
-      <div class="hero">
+      <div class="products-main">
+        <h1 class="products">Our products</h1>
+        <div class="products-main-img"><img src="/shopimages/shoesresize.jpg" alt="Vintage shoes">
+        </div>
+        <div>
+          <p>Here at Camden Vintage we have a range of hand sourced vintage clothing, accessories and shoes.
+            All of our items are hand picked by us from our favourite suppliers in Italy, the U.S and the U.K.
+            Some of our stock includes; Burberry raincoats, Barbour jackets, Rayban sunglasses, Doc Martens and many more.
+            We also supply costume clothing and vintage army uniforms which are often used in stage and film productions.
+          </p>
+        </div>
       </div>
     </main>
 
@@ -123,3 +133,4 @@
 
   <script src="script.js"></script>
 </html>
+
