fixed broken links

--- a/about.html
+++ b/about.html
@@ -47,23 +47,23 @@
 
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="/index.html" class="nav-link scroll-link">Home</a>
+                <a href="./index.html" class="nav-link scroll-link">Home</a>
               </li>
 
               <li class="nav-item">
-                <a href="/pages/about.html" class="nav-link scroll-link">About Us</a>
+                <a href="./about.html" class="nav-link scroll-link">About Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="/pages/products.html" class="nav-link scroll-link">Products</a>
+                <a href="./products.html" class="nav-link scroll-link">Products</a>
               </li>
 
               <li class="nav-item">
-                <a href="/pages/visit.html" class="nav-link scroll-link">Visit Us</a>
+                <a href="./visit.html" class="nav-link scroll-link">Visit Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="/pages/contact.html" class="nav-link scroll-link">Contact</a>
+                <a href="./contact.html" class="nav-link scroll-link">Contact</a>
               </li>
             </ul>
           </div>
@@ -77,16 +77,17 @@
 
     <!-- Main -->
     <main>
-      <div class="products-main">
-        <h1 class="products">Our products</h1>
-        <div class="products-main-img"><img src="/shopimages/shoesresize.jpg" alt="Vintage shoes">
+      <div class="about-main">
+        <h1 class="about-us">About Us...</h1>
+        <div class="about-main-img"><img src="/shopimages/horsesresize.jpg" alt="Metal horse statues">
         </div>
         <div>
-          <p>Here at Camden Vintage we have a range of hand sourced vintage clothing, accessories and shoes.
-            All of our items are hand picked by us from our favourite suppliers in Italy, the U.S and the U.K.
-            Some of our stock includes; Burberry raincoats, Barbour jackets, Rayban sunglasses, Doc Martens and many more.
-            We also supply costume clothing and vintage army uniforms which are often used in stage and film productions.
-          </p>
+          <p>Welcome to Camden Vintage, the home of hand sourced vintage pieces, based in the heart of Camden town. 
+            We are a small, family run business who started in Camden market almost 15 years ago. 
+            Over this time we have built up a strong connection with the community, gained experience in sourcing unique pieces and collaborated with some of the leading stylists for film, TV and music. 
+            You can see our items in productions from the BBC, ITV, Netflix and many more! We are open every day of the week and welcome all to visit our store. 
+            We look forward to seeing you!</p>
+            <h2 class="signature"> - The Camden Vintage team</h1>
         </div>
       </div>
     </main>
