--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head> 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -47,23 +47,23 @@
 
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="index.html" class="nav-link scroll-link">Home</a>
+                <a href="./index.html" class="nav-link scroll-link">Home</a>
               </li>
 
               <li class="nav-item">
-                <a href="./pages/about.html" class="nav-link scroll-link">About Us</a>
+                <a href="./about.html" class="nav-link scroll-link">About Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="#products" class="nav-link scroll-link">Products</a>
+                <a href="./products.html" class="nav-link scroll-link">Products</a>
               </li>
 
               <li class="nav-item">
-                <a href="#visit" class="nav-link scroll-link">Visit Us</a>
+                <a href="./visit.html" class="nav-link scroll-link">Visit Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="#contact" class="nav-link scroll-link">Contact</a>
+                <a href="./contact.html" class="nav-link scroll-link">Contact</a>
               </li>
             </ul>
           </div>
