--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="shortcut icon" href="./shopimages/icons8-sewing-button-50.png" type="image" />
-
+ 
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
@@ -17,12 +17,6 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-
-    <!-- Google Map -->
-    
-    <script
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
-    defer></script>
 
     <link rel="stylesheet" href="/styles.css" />
     <title>Camden Vintage</title>
@@ -53,23 +47,23 @@
 
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="#home" class="nav-link scroll-link">Home</a>
+                <a href="./index.html" class="nav-link scroll-link">Home</a>
               </li>
 
               <li class="nav-item">
-                <a href="#about" class="nav-link scroll-link">About Us</a>
+                <a href="./about.html" class="nav-link scroll-link">About Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="#products" class="nav-link scroll-link">Products</a>
+                <a href="./products.html" class="nav-link scroll-link">Products</a>
               </li>
 
               <li class="nav-item">
-                <a href="#visit" class="nav-link scroll-link">Visit Us</a>
+                <a href="./visit.html" class="nav-link scroll-link">Visit Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="#contact" class="nav-link scroll-link">Contact</a>
+                <a href="./contact.html" class="nav-link scroll-link">Contact</a>
               </li>
             </ul>
           </div>
@@ -83,41 +77,17 @@
 
     <!-- Main -->
     <main>
-      <div class="visit-main">
-<!-- Map -->
-
-<div class='visit-us-wrapper'>
-  <div class='row'>
-    <div class='column' id="form-column">
-      <section id="contact">
-      <form>
-        <input type="text" placeholder="Name" />
-        <input type="email" placeholder="Email address" />
-        <textarea placeholder="Your message ..."></textarea>
-        <button class="button">Send</button>
-      </form>
-      </section>
-    </div>
-    <div class='column' id="info-column">
-      <div class='info-column'>
-        <h1 class="visit-us">Get in touch</h1>
-        <ul>
-          <li class="li-bold">Opening times</li>
-          <li>Monday: 10 - 6</li>
-          <li>Tuesday: 10 - 6</li>
-          <li>Wednesday: 10 - 6</li>
-          <li>Thursday: 10 - 6</li>
-          <li>Friday: 10 - 6</li>
-          <li>Saturday: 10 - 6</li>
-          <li>Sunday: 10 - 4</li>
-        </ul>
-        <p class="visit-location">We are located in the horse tunnel section of the Stables market, part of the famous Camden Market.
-          Find us directly between Chalk Farm and Camden Town train stations. We look forward to meeting you.</p>
-      </div>
-    </div>
-  </div>
-</div>
-
+      <div class="products-main">
+        <h1 class="products">Our products</h1>
+        <div class="products-main-img"><img src="/shopimages/shoesresize.jpg" alt="Vintage shoes">
+        </div>
+        <div>
+          <p>Here at Camden Vintage we have a range of hand sourced vintage clothing, accessories and shoes.
+            All of our items are hand picked by us from our favourite suppliers in Italy, the U.S and the U.K.
+            Some of our stock includes; Burberry raincoats, Barbour jackets, Rayban sunglasses, Doc Martens and many more.
+            We also supply costume clothing and vintage army uniforms which are often used in stage and film productions.
+          </p>
+        </div>
       </div>
     </main>
 
@@ -161,5 +131,6 @@
   </footer>
   </body>
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </html>
+
