--- a/visit.html
+++ b/visit.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="shortcut icon" href="./shopimages/icons8-sewing-button-50.png" type="image" />
-
+ 
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
@@ -53,23 +53,23 @@
 
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="#home" class="nav-link scroll-link">Home</a>
+                <a href="./index.html" class="nav-link scroll-link">Home</a>
               </li>
 
               <li class="nav-item">
-                <a href="#about" class="nav-link scroll-link">About Us</a>
+                <a href="./about.html" class="nav-link scroll-link">About Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="#products" class="nav-link scroll-link">Products</a>
+                <a href="./products.html" class="nav-link scroll-link">Products</a>
               </li>
 
               <li class="nav-item">
-                <a href="#visit" class="nav-link scroll-link">Visit Us</a>
+                <a href="./visit.html" class="nav-link scroll-link">Visit Us</a>
               </li>
 
               <li class="nav-item">
-                <a href="#contact" class="nav-link scroll-link">Contact</a>
+                <a href="./contact.html" class="nav-link scroll-link">Contact</a>
               </li>
             </ul>
           </div>
@@ -154,5 +154,5 @@
   </footer>
   </body>
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </html>
